
-------------------------------------------------------------------------------

Thu Dec 23 10:59:57 PST 1999
(Raster)

use setlocale.... 

-------------------------------------------------------------------------------

Wed Dec 29 14:14:29 PST 1999
(KainX)

Fixed that weird background setting behavior that E-Slides revealed.

-------------------------------------------------------------------------------

Tue Jan  4 23:58:44 CET 2000
(Saur)

* Corrected a couple of spelling errors in the code.
* Added localization of a few messages in the E.h file.

-------------------------------------------------------------------------------

Thu Jan  6 12:23:56 PST 2000
(Mandrake)

updated copyrights to say 2000. muahahaha.  

-------------------------------------------------------------------------------

Mon Jan 10 18:26:39 PST 2000
(Raster)

use LC_ALL

-------------------------------------------------------------------------------

Mon Jan 10 20:08:46 PST 2000
(Raster)

i cant remmeber if the last commit worked..

-------------------------------------------------------------------------------

Tue Jan 18 11:56:55 PST 2000
(Raster)

extra check for xim in ttfonts

-------------------------------------------------------------------------------

Tue Jan 25 14:38:37 EST 2000
(Christian)

Ganymede 0.5. Lots of minor changes I haven't commited yet, most
notably on the Eterm theme.

-------------------------------------------------------------------------------

Fri Jan 28 10:30:51 PST 2000
(Raster)

now that was silly - setting mode.xselect afterwards to 1 again,..

-------------------------------------------------------------------------------

Fri Jan 28 14:24:27 PST 2000
(KainX)

Fixed issues on platforms with unsigned chars.

-------------------------------------------------------------------------------

Mon Jan 31 10:50:09 PST 2000
(Raster)


text compression works wiht multi-byte stuff now thanks to masahiko :)